--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "form-data": "^4.0.4",
+    "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "openai": "^5.10.2",
     "pdf-parse": "^1.1.1"
