--- a/App/package.json
+++ b/App/package.json
@@ -21,7 +21,10 @@
     "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -39,6 +42,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.540.0",
+    "pdf-lib": "^1.17.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
