--- a/App/package.json
+++ b/App/package.json
@@ -32,7 +32,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
-    "expo-media-library": "^17.1.7",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.4",
     "expo-secure-store": "^14.2.3",
     "expo-sharing": "^13.1.5",
@@ -47,6 +47,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-crop-picker": "^0.51.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
