--- a/App/package.json
+++ b/App/package.json
@@ -46,8 +46,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-color-matrix-image-filters": "^7.0.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-crop-picker": "^0.51.0",
+    "react-native-image-filter-kit": "^0.8.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
