--- a/App/package.json
+++ b/App/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.22",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "^5.0.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-clipboard": "~7.1.5",
@@ -33,19 +33,19 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-media-library": "~17.1.7",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "^14.2.3",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.540.0",
     "pdf-lib": "^1.17.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.6",
+    "react-native": "0.79.5",
     "react-native-color-matrix-image-filters": "^7.0.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-crop-picker": "^0.51.0",
